[gd_scene load_steps=2 format=3 uid="uid://r2heax5rwthr"]

[ext_resource type="Script" path="res://scripts/interação_area.gd" id="1_3a8u1"]

[node name="InteraçãoArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_3a8u1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
